Bug 1738997 - Add missing MEMORY64 ifdefs. r=yury a=pascalc

When ENABLE_WASM_MEMORY64 is not defined, the isMem32() test will
always return true, and there should be no 64-bit case - instead, that
case could just MOZ_CRASH.  This prevents the expansion of templates
for 64-bit code (which would be dead) and means we don't have to
provide masm stubs on platforms that don't support memory64.

Differential Revision: https://phabricator.services.mozilla.com/D130248