js/src/wasm/WasmBCMemory.cpp
@@ -151,6 +151,7 @@ RegI32 BaseCompiler::popConstMemoryAccess<RegI32>(MemoryAccessDesc* access,
   return r;
 }
 
+#ifdef ENABLE_WASM_MEMORY64
 template <>
 RegI64 BaseCompiler::popConstMemoryAccess<RegI64>(MemoryAccessDesc* access,
                                                   AccessCheck* check) {
@@ -179,6 +180,7 @@ RegI64 BaseCompiler::popConstMemoryAccess<RegI64>(MemoryAccessDesc* access,
   moveImm64(int64_t(addr), r);
   return r;
 }
+#endif
 
 template <typename RegType>
 RegType BaseCompiler::popMemoryAccess(MemoryAccessDesc* access,
@@ -239,26 +241,30 @@ void BaseCompiler::branchAddNoOverflow(uint64_t offset, RegI32 ptr, Label* ok) {
   masm.branchAdd32(Assembler::CarryClear, Imm32(uint32_t(offset)), ptr, ok);
 }
 
+#ifdef ENABLE_WASM_MEMORY64
 void BaseCompiler::branchAddNoOverflow(uint64_t offset, RegI64 ptr, Label* ok) {
-#if defined(JS_64BIT)
+#  if defined(JS_64BIT)
   masm.branchAddPtr(Assembler::CarryClear, ImmWord(offset), Register64(ptr).reg,
                     ok);
-#else
+#  else
   masm.branchAdd64(Assembler::CarryClear, Imm64(offset), ptr, ok);
-#endif
+#  endif
 }
+#endif
 
 void BaseCompiler::branchTestLowZero(RegI32 ptr, Imm32 mask, Label* ok) {
   masm.branchTest32(Assembler::Zero, ptr, mask, ok);
 }
 
+#ifdef ENABLE_WASM_MEMORY64
 void BaseCompiler::branchTestLowZero(RegI64 ptr, Imm32 mask, Label* ok) {
-#ifdef JS_64BIT
+#  ifdef JS_64BIT
   masm.branchTestPtr(Assembler::Zero, Register64(ptr).reg, mask, ok);
-#else
+#  else
   masm.branchTestPtr(Assembler::Zero, ptr.low, mask, ok);
-#endif
+#  endif
 }
+#endif
 
 void BaseCompiler::boundsCheck4GBOrLargerAccess(RegPtr tls, RegI32 ptr,
                                                 Label* ok) {
@@ -943,7 +949,11 @@ void BaseCompiler::atomicLoad(MemoryAccessDesc* access, ValType type) {
   if (isMem32()) {
     atomicLoad64<RegI32>(access);
   } else {
+#  ifdef ENABLE_WASM_MEMORY64
     atomicLoad64<RegI64>(access);
+#  else
+    MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#  endif
   }
 #else
   MOZ_CRASH("Should not happen");
@@ -964,7 +974,11 @@ void BaseCompiler::atomicStore(MemoryAccessDesc* access, ValType type) {
   if (isMem32()) {
     atomicXchg64<RegI32>(access, WantResult(false));
   } else {
+#  ifdef ENABLE_WASM_MEMORY64
     atomicXchg64<RegI64>(access, WantResult(false));
+#  else
+    MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#  endif
   }
 #else
   MOZ_CRASH("Should not happen");
@@ -982,14 +996,22 @@ void BaseCompiler::atomicRMW(MemoryAccessDesc* access, ValType type,
     if (isMem32()) {
       atomicRMW32<RegI32>(access, type, op);
     } else {
+#ifdef ENABLE_WASM_MEMORY64
       atomicRMW32<RegI64>(access, type, op);
+#else
+      MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#endif
     }
   } else {
     MOZ_ASSERT(type == ValType::I64 && Scalar::byteSize(viewType) == 8);
     if (isMem32()) {
       atomicRMW64<RegI32>(access, type, op);
     } else {
+#ifdef ENABLE_WASM_MEMORY64
       atomicRMW64<RegI64>(access, type, op);
+#else
+      MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#endif
     }
   }
 }
@@ -1328,14 +1350,22 @@ void BaseCompiler::atomicXchg(MemoryAccessDesc* access, ValType type) {
     if (isMem32()) {
       atomicXchg32<RegI32>(access, type);
     } else {
+#ifdef ENABLE_WASM_MEMORY64
       atomicXchg32<RegI64>(access, type);
+#else
+      MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#endif
     }
   } else {
     MOZ_ASSERT(type == ValType::I64 && Scalar::byteSize(viewType) == 8);
     if (isMem32()) {
       atomicXchg64<RegI32>(access, WantResult(true));
     } else {
+#ifdef ENABLE_WASM_MEMORY64
       atomicXchg64<RegI64>(access, WantResult(true));
+#else
+      MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#endif
     }
   }
 }
@@ -1612,14 +1642,22 @@ void BaseCompiler::atomicCmpXchg(MemoryAccessDesc* access, ValType type) {
     if (isMem32()) {
       atomicCmpXchg32<RegI32>(access, type);
     } else {
+#ifdef ENABLE_WASM_MEMORY64
       atomicCmpXchg32<RegI64>(access, type);
+#else
+      MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#endif
     }
   } else {
     MOZ_ASSERT(type == ValType::I64 && Scalar::byteSize(viewType) == 8);
     if (isMem32()) {
       atomicCmpXchg64<RegI32>(access, type);
     } else {
+#ifdef ENABLE_WASM_MEMORY64
       atomicCmpXchg64<RegI64>(access, type);
+#else
+      MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#endif
     }
   }
 }
@@ -1859,6 +1897,7 @@ void Deallocate<RegI32>(BaseCompiler* bc, RegI64 rexpect, RegI64 rnew) {
 // for the rexpect.high.  And we can't push anything onto the stack while we're
 // popping the memory address because the memory address may be on the stack.
 
+#  ifdef ENABLE_WASM_MEMORY64
 template <>
 void PopAndAllocate<RegI64>(BaseCompiler* bc, RegI64* rexpect, RegI64* rnew,
                             RegI64* rd) {
@@ -1897,6 +1936,7 @@ void Deallocate<RegI64>(BaseCompiler* bc, RegI64 rexpect, RegI64 rnew) {
   // separately in the caller, so just free ecx.
   bc->free(bc->specific_.ecx);
 }
+#  endif
 
 #elif defined(JS_CODEGEN_ARM)
 
@@ -1998,7 +2038,11 @@ bool BaseCompiler::atomicWait(ValType type, MemoryAccessDesc* access,
       if (isMem32()) {
         computeEffectiveAddress<RegI32>(access);
       } else {
+#ifdef ENABLE_WASM_MEMORY64
         computeEffectiveAddress<RegI64>(access);
+#else
+        MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#endif
       }
 
       pushI32(val);
@@ -2017,20 +2061,24 @@ bool BaseCompiler::atomicWait(ValType type, MemoryAccessDesc* access,
       if (isMem32()) {
         computeEffectiveAddress<RegI32>(access);
       } else {
-#ifdef JS_CODEGEN_X86
+#ifdef ENABLE_WASM_MEMORY64
+#  ifdef JS_CODEGEN_X86
         {
           ScratchPtr scratch(*this);
           stashI64(scratch, val);
           freeI64(val);
         }
-#endif
+#  endif
         computeEffectiveAddress<RegI64>(access);
-#ifdef JS_CODEGEN_X86
+#  ifdef JS_CODEGEN_X86
         {
           ScratchPtr scratch(*this);
           val = needI64();
           unstashI64(scratch, val);
         }
+#  endif
+#else
+        MOZ_CRASH("Memory64 not enabled / supported on this platform");
 #endif
       }
 
@@ -2057,7 +2105,11 @@ bool BaseCompiler::atomicWake(MemoryAccessDesc* access,
   if (isMem32()) {
     computeEffectiveAddress<RegI32>(access);
   } else {
+#ifdef ENABLE_WASM_MEMORY64
     computeEffectiveAddress<RegI64>(access);
+#else
+    MOZ_CRASH("Memory64 not enabled / supported on this platform");
+#endif
   }
 
   pushI32(count);
